--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,51 +1,25 @@
-<br><br><br>
+<br><br><br><br><br>
 <div class="row">
 
-  <div class="col-5">
-    <div class="container">
+  <div class="col-12">
+    <div class="container text-center">
       <form>
-        <h3>Welcome back!</h3><br>
+        <h3 class="fonts">Login</h3><br>
+        <!--LogIn-->
         <div class="form-group">
-          <label for="txtEmail">Email:
-            <input type="email" class="form-control" formControlname="emails" #emails placeholder="Enter Email:">
+          <label for="txtEmail">
+            <input type="email" class="form-control" formControlname="emails" #emails placeholder="Enter Email..">
           </label>
         </div>
         <div class="form-group">
-          <label for="txtPassword">Password:
-            <input type="passwords" class="form-control" formControlname="password" #passwords
-              placeholder="Enter Password:">
+          <label for="txtPassword">
+            <input class="input-group text-center" type="password" class="form-control" formControlname="password" #passwords
+              placeholder="Enter Password..">
           </label>
         </div>
-        <input type="checkbox"> Keep me signed in
         <br><br>
         <button type="submit" (click)="logIn(emails.value, passwords.value)" class="btn btn-primary">Log In</button>
       </form>
+      <div *ngIf="fail">Your credentials are wrong </div>
     </div>
   </div>
-  <div class="vl"></div>
-  <div class="col-5">
-    <div class="container">
-      <form>
-        <h3>Or create a new account:</h3><br>
-        <div class="form-group">
-          <label for="txtEmail">Email:
-            <input type="email" class="form-control" formControlname="email" #email placeholder="Enter Email:">
-          </label>
-        </div>
-        <div class="form-group">
-          <label for="txtUserName">Username:
-            <input type="text" class="form-control" formControlname="username" #username placeholder="Enter Username:">
-          </label>
-        </div>
-        <div class="form-group">
-          <label for="txtPassword">Password:
-            <input type="password" class="form-control" formControlname="password" #password
-              placeholder="Enter Password:">
-          </label>
-        </div>
-        <button type="submit" (click)="signUp(email.value, username.value, password.value)" class="btn btn-primary">Sign Up</button>
-      </form>
-    </div>
-  </div>
-
-</div>
